# telegram-scraper

./: .gitignore  pyproject.toml  telegram_scraper_session.session  telegram_scraper_session.session-journal  telegram_state.json
src/telegram_intel_scraper/core/: config.py  scrape.py
src/telegram_intel_scraper/providers/: call_to_webhook.py  telegram.py  text_translate_genai.py  title_genai.py
src/telegram_intel_scraper/repositories/: articles_repository.py
